--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>GenZone | Elite Gaming Experience</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
 
@@ -18,32 +18,9 @@ font-family:'Orbitron',sans-serif;
 }
 
 body{
-background:#0a0014;
+background: linear-gradient(to bottom, #0a0014, #140028);
 color:white;
 overflow-x:hidden;
-}
-
-/* LOADER */
-#loader{
-position:fixed;
-width:100%;
-height:100vh;
-background:black;
-display:flex;
-justify-content:center;
-align-items:center;
-z-index:9999;
-flex-direction:column;
-}
-
-#loader img{
-width:150px;
-animation: glow 2s infinite alternate;
-}
-
-@keyframes glow{
-from{filter:drop-shadow(0 0 10px #6a00ff);}
-to{filter:drop-shadow(0 0 30px #b57cff);}
 }
 
 /* NAVBAR */
@@ -51,19 +28,20 @@ nav{
 position:fixed;
 width:100%;
 background:rgba(0,0,0,0.8);
-padding:20px 60px;
+padding:15px 50px;
 display:flex;
 justify-content:space-between;
 align-items:center;
 z-index:1000;
-backdrop-filter:blur(10px);
 }
 
-nav img{height:50px;}
+nav img{
+height:50px;
+}
 
 nav a{
 color:#b57cff;
-margin-left:25px;
+margin-left:20px;
 text-decoration:none;
 transition:0.3s;
 }
@@ -72,85 +50,73 @@ nav a:hover{
 color:white;
 }
 
-/* HERO SLIDER */
+/* HERO */
 .hero{
 height:100vh;
+background:url('https://images.unsplash.com/photo-1605902711622-cfb43c4437d1') center/cover;
+display:flex;
+flex-direction:column;
+justify-content:center;
+align-items:center;
+text-align:center;
 position:relative;
-overflow:hidden;
 }
 
-.slide{
+.hero::after{
+content:'';
 position:absolute;
+top:0;
+left:0;
 width:100%;
 height:100%;
-background-size:cover;
-background-position:center;
-animation:fade 15s infinite;
-}
-
-.slide:nth-child(1){background-image:url('https://images.unsplash.com/photo-1605902711622-cfb43c4437d1');}
-.slide:nth-child(2){background-image:url('https://images.unsplash.com/photo-1598550476439-6847785fcea6');animation-delay:5s;}
-.slide:nth-child(3){background-image:url('https://images.unsplash.com/photo-1612287230202-1ff1d85d1bdf');animation-delay:10s;}
-
-@keyframes fade{
-0%{opacity:0;}
-10%{opacity:1;}
-30%{opacity:1;}
-40%{opacity:0;}
-100%{opacity:0;}
+background:rgba(0,0,0,0.7);
 }
 
 .hero-content{
-position:absolute;
-top:50%;
-left:50%;
-transform:translate(-50%,-50%);
-text-align:center;
-z-index:2;
+position:relative;
+z-index:1;
 }
 
-.hero-content h1{
-font-size:70px;
+.hero h1{
+font-size:60px;
 color:#b57cff;
-text-shadow:0 0 20px #6a00ff;
 }
 
-.hero-content p{
+.hero p{
 margin:20px 0;
 font-size:20px;
-letter-spacing:3px;
+letter-spacing:2px;
 }
 
 .btn{
-padding:15px 30px;
+padding:12px 25px;
 margin:10px;
 border:none;
-border-radius:40px;
 background:#6a00ff;
 color:white;
 cursor:pointer;
+border-radius:30px;
 transition:0.4s;
 }
 
 .btn:hover{
 background:white;
 color:#6a00ff;
-transform:scale(1.05);
 }
 
 /* SECTION */
 section{
-padding:120px 10%;
+padding:100px 10%;
 }
 
 .section-title{
 text-align:center;
-font-size:45px;
-margin-bottom:60px;
+font-size:40px;
+margin-bottom:50px;
 color:#b57cff;
 }
 
-/* GAME CARDS */
+/* GAMES GRID */
 .games{
 display:grid;
 grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
@@ -158,82 +124,66 @@ gap:30px;
 }
 
 .game-card{
-background:#140028;
-border-radius:20px;
-overflow:hidden;
+background:#1a0033;
+padding:20px;
+border-radius:15px;
 transition:0.4s;
 }
 
 .game-card img{
 width:100%;
-height:250px;
-object-fit:cover;
+border-radius:10px;
 }
 
 .game-card:hover{
-transform:scale(1.05);
-box-shadow:0 0 25px #6a00ff;
-}
-
-.game-card h3{
-padding:20px;
-}
-
-/* PARALLAX */
-.parallax{
-background:url('https://images.unsplash.com/photo-1542751371-adc38448a05e') center/cover fixed;
-height:400px;
-display:flex;
-justify-content:center;
-align-items:center;
-font-size:40px;
-color:white;
-text-shadow:0 0 20px #6a00ff;
-}
-
-/* GALLERY */
-.gallery{
-display:grid;
-grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
-gap:20px;
-}
-
-.gallery img{
-width:100%;
-border-radius:15px;
-transition:0.4s;
-}
-
-.gallery img:hover{
 transform:scale(1.05);
 box-shadow:0 0 20px #6a00ff;
 }
 
 /* CONTACT */
+.contact{
+text-align:center;
+}
+
 iframe{
 width:100%;
 height:400px;
-border-radius:20px;
+border-radius:15px;
 }
 
-/* FLOAT BUTTONS */
-.float-btn{
+/* FLOAT CALL */
+.call-btn{
 position:fixed;
 bottom:20px;
 right:20px;
 background:#6a00ff;
-padding:18px;
+padding:15px;
 border-radius:50%;
-color:white;
-text-decoration:none;
-box-shadow:0 0 20px #6a00ff;
 font-size:20px;
+text-decoration:none;
+color:white;
+box-shadow:0 0 15px #6a00ff;
 }
 
-.whatsapp{
-bottom:80px;
-background:#25D366;
-box-shadow:0 0 20px #25D366;
+/* POPUP */
+.popup{
+position:fixed;
+top:0;
+left:0;
+width:100%;
+height:100%;
+background:rgba(0,0,0,0.8);
+display:flex;
+justify-content:center;
+align-items:center;
+visibility:hidden;
+}
+
+.popup-content{
+background:#140028;
+padding:40px;
+border-radius:20px;
+text-align:center;
 }
 
 </style>
@@ -241,82 +191,102 @@ box-shadow:0 0 20px #25D366;
 
 <body>
 
-<div id="loader">
-<img src="logo.png">
-<h2>Loading Elite Experience...</h2>
-</div>
-
+<!-- NAV -->
 <nav>
-<img src="logo.png">
+<img src="logo.png" alt="GenZone Logo">
 <div>
 <a href="#games">Games</a>
-<a href="#gallery">Gallery</a>
 <a href="#contact">Contact</a>
 </div>
 </nav>
 
+<!-- HERO -->
 <div class="hero">
-<div class="slide"></div>
-<div class="slide"></div>
-<div class="slide"></div>
-
 <div class="hero-content">
 <h1>ELITE GAMING EXPERIENCE</h1>
 <p>Power. Performance. Prestige.</p>
-<button class="btn">Book Slot</button>
+<button class="btn" onclick="openPopup()">Book Slot</button>
 <a href="tel:03392154933"><button class="btn">Call Now</button></a>
 </div>
 </div>
 
+<!-- GAMES -->
 <section id="games">
-<h2 class="section-title">Our Arena</h2>
+<h2 class="section-title">Our Gaming Arena</h2>
 <div class="games">
 
-<div class="game-card"><img src="https://images.unsplash.com/photo-1612287230202-1ff1d85d1bdf"><h3>Counter Strike</h3></div>
-<div class="game-card"><img src="https://images.unsplash.com/photo-1627856013091-fed6e6e30025"><h3>Valorant</h3></div>
-<div class="game-card"><img src="https://images.unsplash.com/photo-1606813909025-67e1d4f4e4f5"><h3>Tekken</h3></div>
-<div class="game-card"><img src="https://images.unsplash.com/photo-1526506118085-60ce8714f8c5"><h3>FIFA</h3></div>
-<div class="game-card"><img src="https://images.unsplash.com/photo-1542751371-adc38448a05e"><h3>GTA V</h3></div>
-<div class="game-card"><img src="https://images.unsplash.com/photo-1587202372775-e229f172b9d7"><h3>PS5 Arena</h3></div>
-
-</div>
-</section>
-
-<div class="parallax">
-Elite PCs • RTX Graphics • 240Hz Monitors • PS5
-</div>
-
-<section id="gallery">
-<h2 class="section-title">Inside GenZone</h2>
-<div class="gallery">
-
-<img src="https://images.unsplash.com/photo-1598550476439-6847785fcea6">
-<img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437d1">
+<div class="game-card">
 <img src="https://images.unsplash.com/photo-1612287230202-1ff1d85d1bdf">
-<img src="https://images.unsplash.com/photo-1542751371-adc38448a05e">
+<h3>Counter Strike</h3>
+</div>
+
+<div class="game-card">
+<img src="https://images.unsplash.com/photo-1627856013091-fed6e6e30025">
+<h3>Valorant</h3>
+</div>
+
+<div class="game-card">
+<img src="https://images.unsplash.com/photo-1606813909025-67e1d4f4e4f5">
+<h3>Tekken</h3>
+</div>
+
+<div class="game-card">
+<img src="https://images.unsplash.com/photo-1526506118085-60ce8714f8c5">
+<h3>FIFA</h3>
+</div>
+
+<div class="game-card">
+<img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437d1">
+<h3>GTA V</h3>
+</div>
+
+<div class="game-card">
+<img src="https://images.unsplash.com/photo-1587202372775-e229f172b9d7">
+<h3>PS5 Gaming</h3>
+</div>
 
 </div>
 </section>
 
+<!-- CONTACT -->
 <section id="contact">
 <h2 class="section-title">Find Us</h2>
-<p style="text-align:center;margin-bottom:30px;">
-Moon Garden, Mezzanine Floor, Block 10-A, Gulshan<br>
-Near Madina Blessing Apartment<br>
-📞 0339 2154933
-</p>
+<div class="contact">
 
-<iframe src="https://www.google.com/maps?q=Gulshan%20Karachi&output=embed"></iframe>
+<p>Moon Garden, Mezzanine Floor<br>
+Block 10-A, Gulshan<br>
+Near Madina Blessing Apartment</p>
+
+<p>📞 0339 2154933</p>
+<p>Instagram: @genzonegaming</p>
+
+<br>
+
+<iframe 
+src="https://www.google.com/maps?q=Gulshan%20Karachi&output=embed">
+</iframe>
+
+</div>
 </section>
 
-<a href="tel:03392154933" class="float-btn">📞</a>
-<a href="https://wa.me/923392154933" class="float-btn whatsapp">🟢</a>
+<a href="tel:03392154933" class="call-btn">📞</a>
+
+<!-- POPUP -->
+<div class="popup" id="popup">
+<div class="popup-content">
+<h2>🔥 Book Your Gaming Slot Now</h2>
+<p>Call us at 0339 2154933</p>
+<button class="btn" onclick="closePopup()">Close</button>
+</div>
+</div>
 
 <script>
-window.onload = function(){
-setTimeout(function(){
-document.getElementById("loader").style.display="none";
-},2500);
+function openPopup(){
+document.getElementById('popup').style.visibility="visible";
+}
+
+function closePopup(){
+document.getElementById('popup').style.visibility="hidden";
 }
 </script>
 
