--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
+
 *{
 margin:0;
 padding:0;
@@ -137,6 +138,7 @@ background:white;
 color:#25D366;
 }
 
+/* SECTION */
 section{
 padding:120px 10%;
 }
@@ -148,11 +150,12 @@ margin-bottom:60px;
 color:#b57cff;
 }
 
-/* PRICE IMAGE */
+/* PRICE + VIDEO CONTAINER */
 .price-image-container{
 text-align:center;
 }
 
+/* Price Image */
 .price-image-container img{
 width:100%;
 max-width:900px;
@@ -166,17 +169,27 @@ transform:scale(1.02);
 box-shadow:0 0 60px #b57cff;
 }
 
-/* VIDEO SECTION */
-.video-container{
-text-align:center;
-margin-top:60px;
+/* Cinematic Glow */
+@keyframes cinematicGlow{
+0%{box-shadow:0 0 25px #6a00ff;}
+50%{box-shadow:0 0 70px #b57cff;}
+100%{box-shadow:0 0 25px #6a00ff;}
 }
 
-.video-container video{
-width:90%;
+/* Video iframes */
+.price-image-container iframe{
+width:100%;
 max-width:900px;
+height:500px;
+border:none;
 border-radius:20px;
-box-shadow:0 0 40px #6a00ff;
+margin-top:40px;
+animation:cinematicGlow 3s infinite ease-in-out;
+transition:0.4s;
+}
+
+.price-image-container iframe:hover{
+transform:scale(1.02);
 }
 
 /* GAMES */
@@ -240,13 +253,42 @@ height:400px;
 border-radius:15px;
 margin-top:30px;
 }
+
+/* FLOAT BUTTONS */
+.float-buttons{
+position:fixed;
+bottom:20px;
+right:20px;
+display:flex;
+flex-direction:column;
+gap:15px;
+z-index:999;
+}
+
+.float-buttons a{
+background:#25D366;
+color:white;
+padding:15px;
+border-radius:50%;
+text-align:center;
+font-size:20px;
+text-decoration:none;
+box-shadow:0 0 15px #25D366;
+transition:0.3s;
+}
+
+.float-buttons a:hover{
+transform:scale(1.1);
+background:#b57cff;
+}
+
 </style>
 </head>
 
 <body>
 
 <nav>
-<img src="logo.jpg">
+<img src="logo.jpg" alt="GenZone Logo">
 <div>
 <a href="#prices">Prices</a>
 <a href="#games">Games</a>
@@ -255,17 +297,18 @@ margin-top:30px;
 </div>
 </nav>
 
+<!-- HERO -->
 <div class="hero">
 <div class="slide"></div>
 <div class="slide"></div>
 <div class="slide"></div>
 
 <div class="hero-overlay">
-<img src="logo.jpg">
+<img src="logo.jpg" alt="GenZone Logo">
 <h1>ELITE GAMING EXPERIENCE</h1>
 <p>Power. Performance. Prestige.</p>
 
-<a href="https://wa.me/923392154933" target="_blank">
+<a href="https://wa.me/923392154933?text=Hi%20GENZONE,%20I%20want%20to%20book%20a%20gaming%20slot." target="_blank">
 <button class="btn">BOOK VIA WHATSAPP</button>
 </a>
 
@@ -275,22 +318,67 @@ margin-top:30px;
 </div>
 </div>
 
+<!-- PRICE SECTION -->
 <section id="prices">
 <h2 class="section-title">Our Pricing</h2>
-
 <div class="price-image-container">
-<img src="pricemenu.jpg">
+
+<img src="pricemenu.jpg" alt="GenZone Price Menu">
+
+<!-- VIDEO 1 -->
+<iframe src="video1.html"></iframe>
+
+<!-- VIDEO 2 -->
+<iframe src="video2.html"></iframe>
+
 </div>
-
-<h2 class="section-title" style="margin-top:100px;">Inside Our GenZone</h2>
-
-<div class="video-container">
-<video autoplay muted loop playsinline>
-<source src="genzone_web_optimized.mp4" type="video/mp4">
-</video>
-</div>
-
 </section>
+
+<!-- GAMES -->
+<section id="games">
+<h2 class="section-title">Games We Offer</h2>
+
+<div class="games">
+<div class="game-card"><img src="csgo.jpg"><h3>Counter Strike Global Offensive</h3></div>
+<div class="game-card"><img src="valorant.jpg"><h3>Valorant</h3></div>
+<div class="game-card"><img src="gta5.jpg"><h3>GTA 5</h3></div>
+<div class="game-card"><img src="fifa.jpg"><h3>FIFA</h3></div>
+<div class="game-card"><img src="tekken.jpg"><h3>Tekken</h3></div>
+</div>
+</section>
+
+<!-- GALLERY -->
+<section id="gallery">
+<h2 class="section-title">Inside GenZone</h2>
+<div class="gallery">
+<img src="zone1.jpg">
+<img src="zone2.jpg">
+<img src="zone3.jpg">
+</div>
+</section>
+
+<!-- CONTACT -->
+<section id="contact">
+<h2 class="section-title">Find Us</h2>
+
+<div class="contact">
+<p>
+Moon Garden, Mezzanine Floor<br>
+Block 10-A, Gulshan-e-Iqbal<br>
+Near Madina Blessing Apartment<br><br>
+📞 0339 2154933<br>
+Instagram: @genzonegaming
+</p>
+
+<iframe src="https://www.google.com/maps?q=Moon%20Garden%20Gulshan%20Karachi&output=embed"></iframe>
+</div>
+</section>
+
+<!-- FLOAT BUTTONS -->
+<div class="float-buttons">
+<a href="https://wa.me/923392154933" target="_blank">💬</a>
+<a href="https://instagram.com/genzonegaming" target="_blank">📷</a>
+</div>
 
 </body>
 </html>
